# sky-engine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/: 01_hello_sky.py  02_specs.py  03_events.py  04_event_cancelling.py  04_hook_cancelling.py  05_multiple_windows.py  06_user_input.py  07_components.py  08_scenes.py  08_services.py  09_coroutines.py  09_scenes.py  10_coroutines.py  11_animations.py  11_glsl_hello_triangle.py  coroutines.py  e01_glsl_hello_triangle.py  e02_hlsl_worley_noise.py  e03_orbital_simulation.py  event_cancelling.py  hello_triangle.py  interactivity.py  multiple_windows.py  scenes.py  worley_noise.py
sky/: __init__.py  _compat.py  app.py  colors.py  core.py  easing.py  enums.py  hook.py  hot_reload.py  listenable.py  scene.py  sentinel.py  spec.py  types.py  utils.py  window.py  yieldable.py
sky/_components/: __init__.py  chrono.py  events.py  executor.py  keyboard.py  mouse.py  windowing.py
sky/_managers/: __init__.py  keyboard.py  mouse.py
sky/_services/: __init__.py  chrono.py  events.py  executor.py  keyboard.py  mouse.py  ui.py  windowing.py
sky/components/: __init__.py  chrono.py  events.py  executor.py  keyboard.py  mouse.py  windowing.py
sky/modules/: __init__.py
sky/ui/: __init__.py  button.py  core.py  field.py  layout.py
