[tool.poetry]
name = "sky-engine"
description = "A wrapper around pygame that makes it less painful to use."
authors = ["iNCOHESiONS"]
version = "0.0.1"

license = "MIT"
readme = "README.md"

repository = "https://github.com/incohesions/sky-engine"
homepage = "https://github.com/incohesions/sky-engine"

keywords = ["pygame", "gamedev"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
]

requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "^3.13"
pygame-ce = "^2.5.3"
singleton-decorator = "==1.0.0"
screeninfo = "^0.8.1"

[tool.basedpyright]
typeCheckingMode="all"
pythonVersion="3.13"

reportAny=false
reportExplicitAny=false
reportImportCycles=false  # handled by `if TYPE_CHECKING`, which basedpyright can't detect, apparently
reportPropertyTypeMismatch=false
reportUnannotatedClassAttribute=false
reportUnusedCallResult=false

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
