[project]
name = "sky-engine"
version = "0.0.1"
description = "A wrapper around Pygame that makes it easier to use."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "iNCOHESiONS", email = "incohesions@gmail.com" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.14"

reportAny = false
reportExplicitAny = false
reportImportCycles = false  # handled by `if TYPE_CHECKING`, which basedpyright can't detect, apparently
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false

[tool.poetry]
packages = [{ include = "sky" }]
repository = "https://github.com/incohesions/sky-engine"
homepage = "https://github.com/incohesions/sky-engine"

keywords = [
  "pygame",
  "game-development",
  "game-engine",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
]

requires-python = ">=3.14"

[tool.poetry.dependencies]
pygame-ce = "^2.5.3"
python = "^3.14"
pywin32 = [
  { version = "^311", markers = "sys_platform == 'win32'" },
]
screeninfo = "^0.8.1"
singleton-decorator = "==1.0.0"
watchdog = "6.0.0"

[tool.ruff.format]
docstring-code-format = true
